# titan

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CI_IMPROVEMENT_PLAN.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  NOTICE  README.md  debug_router.py  docker-compose.yml  gemini_ci_issues_analysis.md  test_compression_manual.json  vcpkg.json
.github/: BRANCH_NAMING.md  markdown-link-check.json  pull_request_template.md
.github/workflows/: README.md  benchmark.yml  ci.yml  docker.yml  docs.yml  helm.yml  release.yml  test-pr.yml  version.yml
benchmarks/: CMakeLists.txt  DOCKERFILE_CHANGES.md  QUICKSTART.md  README.md  baseline-poll.json  bench_router_cache.py  bench_simd.cpp  benchmark_config.json  benchmark_tls_config.json  results-final.md  run-baseline.sh  run-nginx-benchmark.sh  run-titan-benchmark.sh
benchmarks/configs/: envoy.yaml  haproxy.cfg  kong.yml  nginx.conf  titan-http2.json  titan.json
benchmarks/results/: .gitignore  FINAL_VALIDATION_SUMMARY.md  HASH_MAP_OPTIMIZATION_FINAL_RESULTS.md  HASH_MAP_OPTIMIZATION_RESULTS.md  HTTP2_TESTING_IMPROVEMENTS.md  VALIDATION_REPORT.md  route_cache_benchmark.md
benchmarks/scripts/: run-all.sh  run-http1.sh  run-http2.sh  setup.sh  utils.sh
config/: benchmark-compression.json  benchmark-http1.json  benchmark-https.json  benchmark-jwt.json  benchmark-middleware-all.json  benchmark-middleware-none.json  benchmark-pool.json  benchmark.json  circuit-breaker-example.json  circuit_breaker_test.json  complete-named-middleware-example.json  envoy-bench.yaml  example.json  haproxy-bench.cfg  jwt-authorization-example.json  jwt-jwks-example.json  nginx-backend-perf.conf  nginx-backend.conf  nginx-benchmark.conf  nginx-proxy-bench.conf  per-route-rate-limiting-example.json  test.json  titan-benchmark.json  titan-dual-port.json  tls-test.json
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/systemd/: README.md  install.sh  titan.service  uninstall.sh
docs/: BUILD_GUIDE.md  CI_CD.md  CONFIG_VALIDATION_SECURITY.md  DEPLOYMENT.md  GOOGLE_ANALYTICS_SETUP.md  HASH_MAP_OPTIMIZATION_ANALYSIS.md  JWT_AUTHENTICATION.md  KUBERNETES_DEPLOYMENT.md  PERFORMANCE_OPTIMIZATION_OPPORTUNITIES.md  PROFILING.md  WEBSITE_PLAN.md  detecting_failures.md  phase7-plan.md  websocket.md
profile_results/session_20251215_233852/: PROFILE_SUMMARY.md  benchmark.txt  runtime_metrics.txt
profile_results/session_20251215_234716/: PROFILE_SUMMARY.md  benchmark.txt  binary_analysis.txt  runtime_metrics.txt
profiling/: CPU_PROFILE_ANALYSIS.md  CRITICAL_FINDINGS.md  OPTIMIZATION_PLAN.md  PHASE1_RESULTS.md  gprof_analysis.txt
scripts/: benchmark-final.sh  benchmark_runner.py  build-release.sh  check_tools.sh  cleanup_benchmark.sh  compare_results.py  create-all-docs.sh  final-comprehensive-benchmark.sh  format.sh  generate_flamegraph.sh  heavy-benchmark.sh  install-optimized.sh  lint.sh  migrate-docs.sh  profile_titan.sh  profile_titan_simple.sh  run_validation.sh  setup-website.sh  simple-benchmark.sh
src/: CMakeLists.txt  main.cpp
src/control/: config.cpp  config.hpp  config_validator.cpp  config_validator.hpp  health.cpp  health.hpp  metrics.hpp  prometheus.hpp
src/core/: admin_server.cpp  admin_server.hpp  backend_proxy_service.cpp  backend_proxy_service.hpp  compression.cpp  compression.hpp  connection_manager.cpp  connection_manager.hpp  containers.hpp  core.cpp  core.hpp  jwks_fetcher.cpp  jwks_fetcher.hpp  jwt.cpp  jwt.hpp  jwt_revocation.cpp  jwt_revocation.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  platform_compat.hpp  server.cpp  server.hpp  server_runner.cpp  server_runner.hpp  socket.cpp  socket.hpp  string_utils.hpp  tls.cpp  tls.hpp
src/gateway/: circuit_breaker.cpp  circuit_breaker.hpp  compression_middleware.cpp  compression_middleware.hpp  connection_pool.cpp  connection_pool.hpp  factory.cpp  factory.hpp  jwt_authz_middleware.cpp  jwt_authz_middleware.hpp  jwt_middleware.cpp  jwt_middleware.hpp  logging.cpp  pipeline.cpp  pipeline.hpp  rate_limit.cpp  rate_limit.hpp  router.cpp  router.hpp  transform_middleware.cpp  transform_middleware.hpp  upstream.cpp  upstream.hpp
src/http/: grpc.cpp  grpc.hpp  h2.cpp  h2.hpp  http.cpp  http.hpp  parser.cpp  parser.hpp  regex.cpp  regex.hpp  simd.hpp  websocket.cpp  websocket.hpp
src/runtime/: orchestrator.cpp  orchestrator.hpp
tests/: CMakeLists.txt  stress_test.sh  test_manual.json
tests/integration/: conftest.py  main.py  mock_backend_circuit_breaker.py  pytest.ini  requirements.txt  test_basic_routing.py  test_circuit_breaker.py  test_compression.py  test_config_validation_integration.py  test_grpc.py  test_grpc_load.py  test_grpc_simple.py  test_grpc_tls.py  test_http2.py  test_http2_stress.py  test_https.py  test_jwt_auth.py  test_jwt_authz.py  test_jwt_security.py  test_load_balancing.py  test_per_route_rate_limiting.py  test_transform.py  test_websocket_e2e_simple.py  test_websocket_middleware.py  test_websocket_proxy.py  test_websocket_simd_e2e.py
tests/mock-backend/: main.py
tests/unit/: CMakeLists.txt  test_circuit_breaker.cpp  test_compression.cpp  test_config.cpp  test_config_validation_security.cpp  test_core.cpp  test_fuzzy_matching_security.cpp  test_gateway.cpp  test_grpc.cpp  test_h2.cpp  test_health.cpp  test_http.cpp  test_injection_attacks.cpp  test_jwks.cpp  test_jwt.cpp  test_jwt_authz.cpp  test_jwt_revocation.cpp  test_jwt_websocket.cpp  test_keepalive.cpp  test_logging.cpp  test_main.cpp  test_memory.cpp  test_metrics.cpp  test_middleware.cpp  test_middleware_chain_security.cpp  test_prometheus.cpp  test_proxy.cpp  test_race_conditions.cpp  test_rate_limit.cpp  test_replacement_model_security.cpp  test_simd.cpp  test_tls.cpp  test_transform.cpp  test_websocket.cpp
website/: .clang-tidy  .eslintrc.json  .prettierignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2025-01-15-introducing-titan.md  (+2 more)
(+40 files in other folders)
